assigment module 3 second commit

--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -34,13 +34,13 @@
           <div id="collapsable-nav" class="collapse navbar-collapse">
              <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
               <li>
-                <a href="#" class="btn btn-default">Chicken</a>
+                <a href="#" class="text-center btn btn-default">Chicken</a>
               </li>
               <li>
-                <a href="#" class="btn btn-default">Beef</a>
+                <a href="#" class="text-center btn btn-default">Beef</a>
               </li>
               <li>
-                <a href="#" class="btn btn-default">Sushi</a>
+                <a href="#" class="text-center btn btn-default">Sushi</a>
               </li>
             </ul><!-- #nav-list -->
           </div><!-- .collapse .navbar-collapse -->
